--- a/index.html
+++ b/index.html
@@ -27,7 +27,202 @@
     <noscript>
       <div><img src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt=""></div>
     </noscript><!-- /Yandex.Metrika counter -->
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <section id="main">
+        <div class="container">
+          <header><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="img/images/logo-1.svg" alt="Логотип"></a>
+            <div class="mobile-menu">
+              <div class="mobile-menu-line mobile-menu-line-1"></div>
+              <div class="mobile-menu-line mobile-menu-line-2"></div>
+              <div class="mobile-menu-line mobile-menu-line-3"></div>
+            </div>
+          </header>
+          <p class="main-pre">Онлайн практикум</p>
+          <h1 class="main-title"><span>Проективный метод современной психологии</span>Метафорические ассоциативные карты”</h1>
+          <p class="main-date"><span>11.11.24 - 11.11.24</span><span>19:00</span></p>
+          <div class="main-text"><img src="img/icons/main.svg" alt="Блокнот"/>
+            <p>Примите участие в&nbsp;5-ти дневном практикуме и <span>получите сертификат </span></p>
+          </div>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Принять участие</a>
+        </div>
+      </section>
+      <section id="plan">
+        <div class="container">
+          <h3 class="general-title">Что будет в программе</h3>
+          <div class="row">
+                  <div class="col-md-4">
+                    <div class="day">
+                      <p class="day-num">/день 1</p>
+                      <h4 class="day-title">Основы МАК</h4>
+                      <p class="day-text">Введение в&nbsp;метафорические ассоциативные карты, их ключевое значение в&nbsp;психологической практике.</p>
+                      <ul class="general-list">
+                        <li>Почему МАК идеально подходят для&amp;nbsp;начинающих психологов. </li>
+                        <li>Интеграция МАК в&amp;nbsp;профессиональную деятельность и их преимуществ перед другими методами. </li>
+                        <li>Стратегии для&amp;nbsp;масштабирования дохода с&amp;nbsp;помощью МАК.</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="day">
+                      <p class="day-num">/день 2</p>
+                      <h4 class="day-title">МАК и отношения</h4>
+                      <p class="day-text">Анализ отношений в&nbsp;паре через МАК,  исследование различных типов взаимоотношений и методику работы с&nbsp;"неподходящими" партнерами.</p>
+                      <ul class="general-list">
+                        <li>Эмоциональная зависимость и влияние неразрешенных прошлых отношений на&amp;nbsp;способность формировать новые связи, проработка с&amp;nbsp;помощью МАК.</li>
+                        <li>Онлайн сессия по&amp;nbsp;запросу участников практикума на&amp;nbsp;тему взаимоотношений.</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="day">
+                      <p class="day-num">/день 3</p>
+                      <h4 class="day-title">Анализ и коррекция финансового состояния через&nbsp;МАК</h4>
+                      <p class="day-text">Практическое применение МАК для&nbsp;исследования личного отношения к&nbsp;деньгам и определения путей улучшения финансового благополучия.</p>
+                      <ul class="general-list">
+                        <li>Обзор методик, направленных на&amp;nbsp;выявление, и преодоление финансовых ограничений, и рассмотрение влияния личностных аспектов на&amp;nbsp;финансовую успешность.</li>
+                        <li>Демонстрационная сессия по&amp;nbsp;запросу для&amp;nbsp;решения финансовых проблем участников практикума.</li>
+                      </ul>
+                    </div>
+                  </div>
+          </div>
+          <div class="row">
+                  <div class="col-md-4">
+                    <div class="day">
+                      <p class="day-num">/день 4</p>
+                      <h4 class="day-title">Взаимосвязь психологического состояния и здоровья</h4>
+                      <p class="day-text">Использование МАК для&nbsp;анализа и коррекции здоровья на&nbsp;основе понимания связи между психоэмоциональным состоянием и физическим здоровьем. Методики направлены на&nbsp;выявление психосоматических причин заболеваний и разработку подходов к&nbsp;их преодолению.</p>
+                      <ul class="general-list">
+                        <li>Как внутренние конфликты и эмоциональные блоки могут влиять на&amp;nbsp;физическое состояние.</li>
+                        <li>Демонстрационная сессия с&amp;nbsp;помощью МАК по работе с&amp;nbsp;психоэмоциональным эквивалентом заболевания для&amp;nbsp;участников практикума.</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="day">
+                      <p class="day-num">/день 5</p>
+                      <h4 class="day-title">Поиск жизненного предназначения с&nbsp;МАК</h4>
+                      <p class="day-text">Глубокое погружение в&nbsp;тему жизненного предназначения, призвания и миссии через&nbsp;МАК.</p>
+                      <ul class="general-list">
+                        <li>Анализ колод, нацеленных на&amp;nbsp;выявление жизненного пути участника, и методик для&amp;nbsp;определения и следования своему предназначению. </li>
+                        <li>Роль семейной истории в выборе жизненного пути.</li>
+                        <li>Демонстрационная сессия по&amp;nbsp;индивидуальным запросам на&amp;nbsp;тему предназначения.</li>
+                      </ul>
+                    </div>
+                  </div>
+          </div>
+        </div>
+      </section>
+      <section id="video">
+        <div class="container">
+          <div class="video-wrapper video-wrapper-video"><img src="img/images/video.png" alt="Видео"/>
+          </div>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Принять участие</a>
+        </div>
+      </section>
+      <section id="for">
+        <div class="container">
+          <h3 class="general-title">Почему не&nbsp;только психологам необходимо изучить метод современной проективной психологии - метафорические ассоциативные карты?</h3>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-1.png" alt="Не&amp;nbsp;требуют профильного психологического образования для&amp;nbsp;использования."/>
+                <p class="for-item-text">Не&nbsp;требуют профильного психологического образования для&nbsp;использования.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-2.png" alt="Подходят для&amp;nbsp;решения острых, сложных, на&amp;nbsp;первый взгляд нерешаемых, вопросов в&amp;nbsp;сфере отношений, финансов и предназначения."/>
+                <p class="for-item-text">Подходят для&nbsp;решения острых, сложных, на&nbsp;первый взгляд нерешаемых, вопросов в&nbsp;сфере отношений, финансов и предназначения.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-3.png" alt="Экологично извлекают необходимую информацию, не&amp;nbsp;насилуя психику."/>
+                <p class="for-item-text">Экологично извлекают необходимую информацию, не&nbsp;насилуя психику.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-4.png" alt="Подходят для&amp;bsp;выстраивания доверительных отношений и коммуникаций с&amp;bsp;детьми, через ассоциации вы узнаете о&amp;bsp;своем ребенке больше, чем через “разговор по&amp;bsp;душам”."/>
+                <p class="for-item-text">Подходят для&bsp;выстраивания доверительных отношений и коммуникаций с&bsp;детьми, через ассоциации вы узнаете о&bsp;своем ребенке больше, чем через “разговор по&bsp;душам”.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-5.png" alt="Возможность проводить самоанализ и находить ответы в&amp;nbsp;сложных кризисных ситуациях."/>
+                <p class="for-item-text">Возможность проводить самоанализ и находить ответы в&nbsp;сложных кризисных ситуациях.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item"><img class="for-item-img" src="img/images/for-6.png" alt="Возможность начать консультационную деятельность и в&amp;nbsp;сжатые сроки выйти на&amp;nbsp;достойный доход."/>
+                <p class="for-item-text">Возможность начать консультационную деятельность и в&nbsp;сжатые сроки выйти на&nbsp;достойный доход.</p>
+              </div>
+            </div>
+          </div>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
+        </div>
+      </section>
+      <section id="why">
+        <div class="container">
+          <h3 class="general-title">Почему психологам необходимо владеть метафорическими ассоциативными картами?</h3>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="for-item for-item-deepgreen"><img class="for-item-img" src="img/images/why-1.png" alt="Данный проективный метод не&amp;nbsp;содержит в&amp;nbsp;себе строгих норм и ограничений, направлен на&amp;nbsp;качественный анализ."/>
+                <p class="for-item-text">Данный проективный метод не&nbsp;содержит в&nbsp;себе строгих норм и ограничений, направлен на&nbsp;качественный анализ.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item for-item-deepgreen"><img class="for-item-img" src="img/images/why-2.png" alt="Отличительной особенностью является максимально глубокое и целостное изучение личности, выявление скрытых мотивов, внутриличностных конфликтов и переживаний."/>
+                <p class="for-item-text">Отличительной особенностью является максимально глубокое и целостное изучение личности, выявление скрытых мотивов, внутриличностных конфликтов и переживаний.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item for-item-deepgreen"><img class="for-item-img" src="img/images/why-3.png" alt="Исключение ошибок в&amp;nbsp;работе, так как клиент самостоятельно извлекает всю информацию через ассоциативный ряд."/>
+                <p class="for-item-text">Исключение ошибок в&nbsp;работе, так как клиент самостоятельно извлекает всю информацию через ассоциативный ряд.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+              <div class="for-item for-item-deepgreen"><img class="for-item-img" src="img/images/why-4.png" alt="Быстрый выход на&amp;nbsp;результат, без&amp;nbsp;долгих сеансов психотерапии, изматывающих клиента и психолога."/>
+                <p class="for-item-text">Быстрый выход на&nbsp;результат, без&nbsp;долгих сеансов психотерапии, изматывающих клиента и психолога.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="for-item for-item-deepgreen"><img class="for-item-img" src="img/images/why-5.png" alt="Выстраивают крепкие и долгосрочные контакты с&amp;nbsp;клиентом."/>
+                <p class="for-item-text">Выстраивают крепкие и долгосрочные контакты с&nbsp;клиентом.</p>
+              </div>
+            </div>
+          </div>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
+        </div>
+      </section>
+      <section id="author">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5 col-md-push-7"><img class="author-img" src="img/images/janna.png" alt="Жанна АБрамова"/>
+            </div>
+            <div class="col-md-7 col-md-pull-5">
+              <h3 class="general-title">Жанна Абрамова</h3>
+              <ul class="general-list">
+                <li><span>Психотерапевт, клинический психолог</span></li>
+                <li><span>Более 15&nbsp;лет</span> практической работы</li>
+                <li><span>Более 10&nbsp;000</span> выпускников окончивших курсы и обучающие программы</li>
+                <li><span>Эксперт</span> федеральных каналов</li>
+                <li><span>Ведущий преподаватель</span> “Института современной психологии”</li>
+                <li><span>Коуч, тренер</span>обучающих и трансформационных программ</li>
+              </ul>
+              <p class="author-item">SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="revs">
+        <div class="container">
+          <h3 class="general-title">Отзывы о практикуме</h3>
+          <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
+          </div>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
+        </div>
+      </section>
+    </div>
     <footer>
       <div class="container">
         <div class="footer-main"><a href="https://iomp.ru" target="_blank"><img class="footer-logo" src="img/images/logo-2.svg" alt="Логотип"></a>
