Main page is stylezed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
           </header>
           <p class="main-pre">Онлайн практикум</p>
-          <h1 class="main-title"><span>Проективный метод современной психологии</span>Метафорические ассоциативные карты”</h1>
+          <h1 class="main-title">Проективный метод современной психологии<span>Метафорические <br class="mob-none">ассоциативные карты”</span></h1>
           <p class="main-date"><span>11.11.24 - 11.11.24</span><span>19:00</span></p>
           <div class="main-text"><img src="img/icons/main.svg" alt="Блокнот"/>
             <p>Примите участие в&nbsp;5-ти дневном практикуме и <span>получите сертификат </span></p>
@@ -56,9 +56,9 @@
                       <h4 class="day-title">Основы МАК</h4>
                       <p class="day-text">Введение в&nbsp;метафорические ассоциативные карты, их ключевое значение в&nbsp;психологической практике.</p>
                       <ul class="general-list">
-                        <li>Почему МАК идеально подходят для&amp;nbsp;начинающих психологов. </li>
-                        <li>Интеграция МАК в&amp;nbsp;профессиональную деятельность и их преимуществ перед другими методами. </li>
-                        <li>Стратегии для&amp;nbsp;масштабирования дохода с&amp;nbsp;помощью МАК.</li>
+                        <li>Почему МАК идеально подходят для&nbsp;начинающих психологов. </li>
+                        <li>Интеграция МАК в&nbsp;профессиональную деятельность и их преимуществ перед другими методами. </li>
+                        <li>Стратегии для&nbsp;масштабирования дохода с&nbsp;помощью МАК.</li>
                       </ul>
                     </div>
                   </div>
@@ -68,8 +68,8 @@
                       <h4 class="day-title">МАК и отношения</h4>
                       <p class="day-text">Анализ отношений в&nbsp;паре через МАК,  исследование различных типов взаимоотношений и методику работы с&nbsp;"неподходящими" партнерами.</p>
                       <ul class="general-list">
-                        <li>Эмоциональная зависимость и влияние неразрешенных прошлых отношений на&amp;nbsp;способность формировать новые связи, проработка с&amp;nbsp;помощью МАК.</li>
-                        <li>Онлайн сессия по&amp;nbsp;запросу участников практикума на&amp;nbsp;тему взаимоотношений.</li>
+                        <li>Эмоциональная зависимость и влияние неразрешенных прошлых отношений на&nbsp;способность формировать новые связи, проработка с&nbsp;помощью МАК.</li>
+                        <li>Онлайн сессия по&nbsp;запросу участников практикума на&nbsp;тему взаимоотношений.</li>
                       </ul>
                     </div>
                   </div>
@@ -79,8 +79,8 @@
                       <h4 class="day-title">Анализ и коррекция финансового состояния через&nbsp;МАК</h4>
                       <p class="day-text">Практическое применение МАК для&nbsp;исследования личного отношения к&nbsp;деньгам и определения путей улучшения финансового благополучия.</p>
                       <ul class="general-list">
-                        <li>Обзор методик, направленных на&amp;nbsp;выявление, и преодоление финансовых ограничений, и рассмотрение влияния личностных аспектов на&amp;nbsp;финансовую успешность.</li>
-                        <li>Демонстрационная сессия по&amp;nbsp;запросу для&amp;nbsp;решения финансовых проблем участников практикума.</li>
+                        <li>Обзор методик, направленных на&nbsp;выявление, и преодоление финансовых ограничений, и рассмотрение влияния личностных аспектов на&nbsp;финансовую успешность.</li>
+                        <li>Демонстрационная сессия по&nbsp;запросу для&nbsp;решения финансовых проблем участников практикума.</li>
                       </ul>
                     </div>
                   </div>
@@ -92,8 +92,8 @@
                       <h4 class="day-title">Взаимосвязь психологического состояния и здоровья</h4>
                       <p class="day-text">Использование МАК для&nbsp;анализа и коррекции здоровья на&nbsp;основе понимания связи между психоэмоциональным состоянием и физическим здоровьем. Методики направлены на&nbsp;выявление психосоматических причин заболеваний и разработку подходов к&nbsp;их преодолению.</p>
                       <ul class="general-list">
-                        <li>Как внутренние конфликты и эмоциональные блоки могут влиять на&amp;nbsp;физическое состояние.</li>
-                        <li>Демонстрационная сессия с&amp;nbsp;помощью МАК по работе с&amp;nbsp;психоэмоциональным эквивалентом заболевания для&amp;nbsp;участников практикума.</li>
+                        <li>Как внутренние конфликты и эмоциональные блоки могут влиять на&nbsp;физическое состояние.</li>
+                        <li>Демонстрационная сессия с&nbsp;помощью МАК по работе с&nbsp;психоэмоциональным эквивалентом заболевания для&nbsp;участников практикума.</li>
                       </ul>
                     </div>
                   </div>
@@ -103,9 +103,9 @@
                       <h4 class="day-title">Поиск жизненного предназначения с&nbsp;МАК</h4>
                       <p class="day-text">Глубокое погружение в&nbsp;тему жизненного предназначения, призвания и миссии через&nbsp;МАК.</p>
                       <ul class="general-list">
-                        <li>Анализ колод, нацеленных на&amp;nbsp;выявление жизненного пути участника, и методик для&amp;nbsp;определения и следования своему предназначению. </li>
+                        <li>Анализ колод, нацеленных на&nbsp;выявление жизненного пути участника, и методик для&nbsp;определения и следования своему предназначению. </li>
                         <li>Роль семейной истории в выборе жизненного пути.</li>
-                        <li>Демонстрационная сессия по&amp;nbsp;индивидуальным запросам на&amp;nbsp;тему предназначения.</li>
+                        <li>Демонстрационная сессия по&nbsp;индивидуальным запросам на&nbsp;тему предназначения.</li>
                       </ul>
                     </div>
                   </div>
@@ -114,7 +114,8 @@
       </section>
       <section id="video">
         <div class="container">
-          <div class="video-wrapper video-wrapper-video"><img src="img/images/video.png" alt="Видео"/>
+          <div class="video-wrapper video-wrapper-video" data-youtube="wL8DVHuWI7Y">
+            <div></div>
           </div>
           <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Принять участие</a>
         </div>
@@ -141,8 +142,8 @@
           </div>
           <div class="row">
             <div class="col-md-4">
-              <div class="for-item"><img class="for-item-img" src="img/images/for-4.png" alt="Подходят для&amp;bsp;выстраивания доверительных отношений и коммуникаций с&amp;bsp;детьми, через ассоциации вы узнаете о&amp;bsp;своем ребенке больше, чем через “разговор по&amp;bsp;душам”."/>
-                <p class="for-item-text">Подходят для&bsp;выстраивания доверительных отношений и коммуникаций с&bsp;детьми, через ассоциации вы узнаете о&bsp;своем ребенке больше, чем через “разговор по&bsp;душам”.</p>
+              <div class="for-item"><img class="for-item-img" src="img/images/for-4.png" alt="Подходят для&amp;nbsp;выстраивания доверительных отношений и коммуникаций с&amp;nbsp;детьми, через ассоциации вы узнаете о&amp;nbsp;своем ребенке больше, чем через “разговор по&amp;nbsp;душам”."/>
+                <p class="for-item-text">Подходят для&nbsp;выстраивания доверительных отношений и коммуникаций с&nbsp;детьми, через ассоциации вы узнаете о&nbsp;своем ребенке больше, чем через “разговор по&nbsp;душам”.</p>
               </div>
             </div>
             <div class="col-md-4">
@@ -197,10 +198,10 @@
       <section id="author">
         <div class="container">
           <div class="row">
-            <div class="col-md-5 col-md-push-7"><img class="author-img" src="img/images/janna.png" alt="Жанна АБрамова"/>
+            <div class="col-md-5 col-md-push-7"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
             </div>
             <div class="col-md-7 col-md-pull-5">
-              <h3 class="general-title">Жанна Абрамова</h3>
+              <h3 class="general-title general-title-author">Жанна Абрамова</h3>
               <ul class="general-list">
                 <li><span>Психотерапевт, клинический психолог</span></li>
                 <li><span>Более 15&nbsp;лет</span> практической работы</li>
@@ -209,7 +210,7 @@
                 <li><span>Ведущий преподаватель</span> “Института современной психологии”</li>
                 <li><span>Коуч, тренер</span>обучающих и трансформационных программ</li>
               </ul>
-              <p class="author-item">SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».</p>
+              <p class="author-item">SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: <br class="mob-none">«Лучший бизнес расстановщик года».</p>
             </div>
           </div>
         </div>
@@ -219,7 +220,7 @@
           <h3 class="general-title">Отзывы о практикуме</h3>
           <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
           </div>
-          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span>Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
+          <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span class="gs-brown">Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
         </div>
       </section>
     </div>
