Main page adapting tablets

--- a/index.html
+++ b/index.html
@@ -30,13 +30,7 @@
     <div class="wrapper">
       <section id="main">
         <div class="container">
-          <header><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="img/images/logo-1.svg" alt="Логотип"></a>
-            <div class="mobile-menu">
-              <div class="mobile-menu-line mobile-menu-line-1"></div>
-              <div class="mobile-menu-line mobile-menu-line-2"></div>
-              <div class="mobile-menu-line mobile-menu-line-3"></div>
-            </div>
-          </header>
+          <header><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="img/images/logo-1.svg" alt="Логотип"></a></header>
           <p class="main-pre">Онлайн практикум</p>
           <h1 class="main-title">Проективный метод современной психологии<span>Метафорические <br class="mob-none">ассоциативные карты”</span></h1>
           <p class="main-date"><span>11.11.24 - 11.11.24</span><span>19:00</span></p>
@@ -198,19 +192,22 @@
       <section id="author">
         <div class="container">
           <div class="row">
-            <div class="col-md-5 col-md-push-7"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
+            <div class="col-md-5 col-md-push-7">
+              <h3 class="general-title general-title-author-mob">Жанна Абрамова</h3><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
             </div>
             <div class="col-md-7 col-md-pull-5">
               <h3 class="general-title general-title-author">Жанна Абрамова</h3>
-              <ul class="general-list">
-                <li><span>Психотерапевт, клинический психолог</span></li>
-                <li><span>Более 15&nbsp;лет</span> практической работы</li>
-                <li><span>Более 10&nbsp;000</span> выпускников окончивших курсы и обучающие программы</li>
-                <li><span>Эксперт</span> федеральных каналов</li>
-                <li><span>Ведущий преподаватель</span> “Института современной психологии”</li>
-                <li><span>Коуч, тренер</span>обучающих и трансформационных программ</li>
-              </ul>
-              <p class="author-item">SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: <br class="mob-none">«Лучший бизнес расстановщик года».</p>
+              <div class="author-info">
+                <p class="author-item">SKOLKOVO TECH&nbsp;&&nbsp;INNOVATION Awards 2023 в&nbsp;номинации: <br>«Лучший бизнес расстановщик года».</p>
+                <ul class="general-list">
+                  <li><span>Психотерапевт, клинический психолог</span></li>
+                  <li><span>Более 15&nbsp;лет</span> практической работы</li>
+                  <li><span>Более 10&nbsp;000</span> выпускников окончивших курсы и обучающие программы</li>
+                  <li><span>Эксперт</span> федеральных каналов</li>
+                  <li><span>Ведущий преподаватель</span> “Института современной психологии”</li>
+                  <li><span>Коуч, тренер</span>обучающих и трансформационных программ</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -220,6 +217,10 @@
           <h3 class="general-title">Отзывы о практикуме</h3>
           <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
           </div>
+        </div>
+      </section>
+      <section id="last">
+        <div class="container">
           <h4 class="general-subtitle">Зарегистрируйтесь прямо сейчас и получите <span class="gs-brown">Авторскую колоду метафорических карт</span></h4><a class="button" href="!#">Зарегистрироваться</a>
         </div>
       </section>
