Course styling part 1

--- a/course/index.html
+++ b/course/index.html
@@ -30,44 +30,56 @@
     <div class="wrapper">
       <section id="main">
         <div class="container">
-          <header><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="../img/images/logo-black.svg" alt="Логотип"></a></header>
+          <header><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="../img/images/logo-1.svg" alt="Логотип"></a>
+            <div class="header-menu">
+              <ul class="header-menu-list">
+                <li><a href="#for">Для кого</a></li>
+                <li><a href="#why">Почему мы</a></li>
+                <li><a href="#plan">Программа курса</a></li>
+                <li><a href="#prices">Тарифы</a></li>
+                <li><a href="#revs">Отзывы</a></li>
+              </ul>
+            </div>
+          </header>
           <div class="content">
             <p class="main-pre">Программа профессиональной переподготовки с&nbsp;выдачей диплома</p>
             <h1 class="main-title">МЕТАФОРИЧЕСКИЕ АССОЦИАТИВНЫЕ КАРТЫ</h1>
-            <h2 class="main-subtitle">Забронируйте место на&nbsp;курсе сегодня и получите грант на&nbsp;обучение 50&nbsp;000&nbsp;рублей.</h2><a class="button" href="#prices">Выбрать тариф</a>
+            <h2 class="main-subtitle">Забронируйте место на&nbsp;курсе сегодня и получите грант на&nbsp;обучение <span>50&nbsp;000&nbsp;рублей.</span></h2><a class="button" href="#prices">Выбрать тариф</a>
           </div>
         </div>
       </section>
       <section id="for">
         <div class="container">
           <h3 class="general-title">Кому подойдет данная программа?</h3>
-          <div class="for-item">
-            <div class="for-item-title"><img class="for-item-img" src="../img/icona/for-1.png" alt="Новичкам"/>
-              <h4 class="for-item-title">Новичкам</h4>
+          <div class="col-md-10 col-md-offset-1">
+            <div class="for-item">
+              <div class="for-item-title"><img class="for-item-img" src="../img/icons/for-1.svg" alt="Новичкам"/>
+                <h4>Новичкам</h4>
+              </div>
+              <ul class="general-list general-list-black">
+                <li>Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.</li>
+                <li>Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.</li>
+                <li>Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.</li>
+                <li>Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.</li>
+              </ul>
             </div>
-            <ul class="general-list">
-              <li>Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.</li>
-              <li>Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.</li>
-              <li>Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.</li>
-              <li>Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.</li>
-            </ul>
+            <div class="for-item">
+              <div class="for-item-title"><img class="for-item-img" src="../img/icons/for-2.svg" alt="Опытным специалистам помогающих профессий"/>
+                <h4>Опытным специалистам помогающих профессий</h4>
+              </div>
+              <ul class="general-list general-list-black">
+                <li>Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.</li>
+                <li>Использование метода в&nbsp;групповой терапии, поможет повысить доход.</li>
+                <li>Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.</li>
+              </ul>
+            </div><a class="button" href="#prices">Выбрать тариф</a>
           </div>
-          <div class="for-item">
-            <div class="for-item-title"><img class="for-item-img" src="../img/icona/for-2.png" alt="Опытным специалистам помогающих профессий"/>
-              <h4 class="for-item-title">Опытным специалистам помогающих профессий</h4>
-            </div>
-            <ul class="general-list">
-              <li>Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.</li>
-              <li>Использование метода в&nbsp;групповой терапии, поможет повысить доход.</li>
-              <li>Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.</li>
-            </ul>
-          </div><a class="button" href="#prices">Выбрать тариф</a>
         </div>
       </section>
       <div class="black-wrapper">
         <section id="why">
           <div class="container">
-            <h3 class="general-title">Почему <span>именно наш институт</span> нужно выбрать для обучения</h3>
+            <h3 class="general-title general-title-white">Почему <span>именно наш институт</span><br class="mob-none"> нужно выбрать для обучения</h3>
             <div class="why-items">
               <p class="why-item">Опыт создания обучающих систем, проверенный временем</p>
               <p class="why-item">Звездный преподавательский состав</p>
@@ -83,76 +95,84 @@
         <section id="plan">
           <div class="container">
             <div class="plan-wrapper"><img src="../img/backs/course-plan.png" alt="План курса"/>
-              <h3 class="plan-title">Программа курса</h3>
-              <p class="plan-text">Программа дипломного курса из&nbsp;53 видео-уроков:продолжительность каждого урока - 2-3&nbsp;часа</p><a class="button plan-button" href="#!">Подробнее</a>
+              <div class="plan-wrapper-title">
+                <h3 class="general-title general-title-white general-title-plan">Программа курса</h3>
+                <p class="plan-text">Программа дипломного курса из&nbsp;53 видео-уроков:<br>продолжительность каждого урока - 2-3&nbsp;часа</p>
+              </div><a class="button plan-button" href="#!">Подробнее</a>
             </div>
-            <ul class="general-list general-list-white">
-              <li>Предварительный урок. Классификация колод. Техника безопасности. Практика Денежный потолок. Игра. Препятствия и возможности.</li>
-              <li>Формирование штампа судьбы. Как формируется судьба человека.</li>
-              <li>Саботаж. Вторичные выгоды неудач. Почему нам «выгодно» проживать проблемы</li>
-              <li>Ролевые игры в&nbsp;паре. Треугольник «Тиран-Жертва-Спасатель»</li>
-              <li>Мужчина по&nbsp;судьбе/под задачу. Что влияет на&nbsp;наш выбор партнера</li>
-              <li>Ответы на&nbsp;часто задаваемые вопросы.</li>
-              <li>Любовный треугольник. Завершение прошлых связей. Манипуляции. Виды и принципы манипулятивных игр.</li>
-              <li>Личные границы. Кто есть Я? Как формируется наша идентичность.</li>
-              <li>Денежный потолок. Работа с&nbsp;денежной составляющей. Как формируются деньги в&nbsp;нашем пространстве.</li>
-              <li>Проработка причин, влияющих на&nbsp;низкий уровень финансов. Провальные финансовые стратегии.</li>
-              <li>Дополнительный урок    Закрытый тренинг для&nbsp;учеников Жанны Абрамовой</li>
-              <li>Мнемотехники (как быстрее и эффективнее усваивать материал). Ответы на&nbsp;часто задаваемые вопросы</li>
-              <li>Травмы детства. Исцеление детского страха.</li>
-              <li>Принцип отправной точки травм. Где и когда сформировались истинные причины наших проблем. Психосоматозы (болезни, основанные на&nbsp;психотравме)</li>
-              <li>Родительско-детские конфликты. Жизнь подростка. Травмы пубертатного периода, влияющие на&nbsp;формирование судьбы. Созависимость. Симбиоз. Сепарация.</li>
-              <li>Повторение маминой судьбы. Зачем мы живем? Коллаж болезней. Принцип метафизики (заболеваний).</li>
-              <li>Основные законы функционирования семейных систем.</li>
-              <li>Блоки, влияющие на&nbsp;судьбу. Слепые пятна. Воронки</li>
-              <li>Работа с&nbsp;родовыми блоками. Фразы расколдовыватели</li>
-              <li>Инцест. Аборт.</li>
-              <li>Причины возникновения бесплодия. Закрытие абортированного поля.</li>
-              <li>Системно-родовая терапия в&nbsp;работе с&nbsp;отношениями.</li>
-              <li>Деньги в&nbsp;паре</li>
-              <li>Бедность как&nbsp;ресурс. Ключ к&nbsp;деньгам в&nbsp;паре.</li>
-              <li>Долги и кредиты.</li>
-              <li>Бизнес</li>
-              <li>Работа с&nbsp;травмой</li>
-              <li>Исцеление травм</li>
-              <li>Работа с&nbsp;заболеваниями</li>
-              <li>Нерожденные дети</li>
-              <li>Выстраивание системного поля</li>
-              <li>Техники исцеления ДНК</li>
-              <li>Нейтрализация деструктивных программ</li>
-              <li>Основы инфобизнеса. Целевая аудитория. Робота с&nbsp;продуктом</li>
-              <li>Типажи. Особенности типажей. Точка входа в&nbsp;типажный голод</li>
-              <li>Написание программы тренинга. Подготовка квеста/марафона</li>
-              <li>Учимся простраивать причино-следственную связь проблематики через квест/марафон</li>
-              <li>Тренировка составления программы: от&nbsp;мысли до&nbsp;проведения тренинга. Пошаговая инструкция для&nbsp;нейтрализации симптома (страха)</li>
-              <li>Работа с&nbsp;фобиями. Техники МАК: Лояльность к&nbsp;системе, Кармические задачи</li>
-              <li>Поиск СКО (отправной точки)</li>
-              <li>Исцеление шаблона: Восстановление силы</li>
-              <li>Работа с&nbsp;провальными инстинктами</li>
-              <li>Работа с&nbsp;физическими симптомами</li>
-              <li>Коуч сессия</li>
-              <li>Коуч сессия — работа с&nbsp;саботажем</li>
-              <li>Работа с&nbsp;саботажем</li>
-              <li>Инфобизнес</li>
-              <li>Составление программы продающего мастер класса</li>
-              <li>Как проводить продающий мастер класс</li>
-              <li>Продажи на&nbsp;вебинарах</li>
-              <li>Подготовка к&nbsp;запуску МК и платного курса</li>
-              <li>Составление своих авторских техник работы с&nbsp;МАК</li>
-              <li>Работа с&nbsp;клиентом по&nbsp;моделированию жизни. Присоединение и ведение клиента</li>
-              <li>Демо-сессия по&nbsp;технике Квантовый скачок из&nbsp;проблемы в&nbsp;ресурсное состояние</li>
-              <li>Технология антикризис. Работа с&nbsp;клиентом по&nbsp;запросу о&nbsp;деньгах. Денежный уровень человека</li>
-              <li>Новые тенденции написания тренингов в&nbsp;период кризиса</li>
-            </ul>
-          </div>
-          <div class="plan-filling">
             <div class="row">
-              <div class="col-md-6">
-                <h4 class="plan-filling-title">В&nbsp;обучение входит</h4>
+              <div class="col-md-10 col-md-offset-1">
+                <ul class="general-list general-list-white general-list-plan">
+                  <li>Предварительный урок. Классификация колод. Техника безопасности. Практика Денежный потолок. Игра. Препятствия и возможности.</li>
+                  <li>Формирование штампа судьбы. Как формируется судьба человека.</li>
+                  <li>Саботаж. Вторичные выгоды неудач. Почему нам «выгодно» проживать проблемы</li>
+                  <li>Ролевые игры в&nbsp;паре. Треугольник «Тиран-Жертва-Спасатель»</li>
+                  <li>Мужчина по&nbsp;судьбе/под задачу. Что влияет на&nbsp;наш выбор партнера</li>
+                  <li>Ответы на&nbsp;часто задаваемые вопросы.</li>
+                  <li>Любовный треугольник. Завершение прошлых связей. Манипуляции. Виды и принципы манипулятивных игр.</li>
+                  <li>Личные границы. Кто есть Я? Как формируется наша идентичность.</li>
+                  <li>Денежный потолок. Работа с&nbsp;денежной составляющей. Как формируются деньги в&nbsp;нашем пространстве.</li>
+                  <li>Проработка причин, влияющих на&nbsp;низкий уровень финансов. Провальные финансовые стратегии.</li>
+                  <li>Дополнительный урок    Закрытый тренинг для&nbsp;учеников Жанны Абрамовой</li>
+                  <li>Мнемотехники (как быстрее и эффективнее усваивать материал). Ответы на&nbsp;часто задаваемые вопросы</li>
+                  <li>Травмы детства. Исцеление детского страха.</li>
+                  <li>Принцип отправной точки травм. Где и когда сформировались истинные причины наших проблем. Психосоматозы (болезни, основанные на&nbsp;психотравме)</li>
+                  <li>Родительско-детские конфликты. Жизнь подростка. Травмы пубертатного периода, влияющие на&nbsp;формирование судьбы. Созависимость. Симбиоз. Сепарация.</li>
+                  <li>Повторение маминой судьбы. Зачем мы живем? Коллаж болезней. Принцип метафизики (заболеваний).</li>
+                  <li>Основные законы функционирования семейных систем.</li>
+                  <li>Блоки, влияющие на&nbsp;судьбу. Слепые пятна. Воронки</li>
+                  <li>Работа с&nbsp;родовыми блоками. Фразы расколдовыватели</li>
+                  <li>Инцест. Аборт.</li>
+                  <li>Причины возникновения бесплодия. Закрытие абортированного поля.</li>
+                  <li>Системно-родовая терапия в&nbsp;работе с&nbsp;отношениями.</li>
+                  <li>Деньги в&nbsp;паре</li>
+                  <li>Бедность как&nbsp;ресурс. Ключ к&nbsp;деньгам в&nbsp;паре.</li>
+                  <li>Долги и кредиты.</li>
+                  <li>Бизнес</li>
+                  <li>Работа с&nbsp;травмой</li>
+                  <li>Исцеление травм</li>
+                  <li>Работа с&nbsp;заболеваниями</li>
+                  <li>Нерожденные дети</li>
+                  <li>Выстраивание системного поля</li>
+                  <li>Техники исцеления ДНК</li>
+                  <li>Нейтрализация деструктивных программ</li>
+                  <li>Основы инфобизнеса. Целевая аудитория. Робота с&nbsp;продуктом</li>
+                  <li>Типажи. Особенности типажей. Точка входа в&nbsp;типажный голод</li>
+                  <li>Написание программы тренинга. Подготовка квеста/марафона</li>
+                  <li>Учимся простраивать причино-следственную связь проблематики через квест/марафон</li>
+                  <li>Тренировка составления программы: от&nbsp;мысли до&nbsp;проведения тренинга. Пошаговая инструкция для&nbsp;нейтрализации симптома (страха)</li>
+                  <li>Работа с&nbsp;фобиями. Техники МАК: Лояльность к&nbsp;системе, Кармические задачи</li>
+                  <li>Поиск СКО (отправной точки)</li>
+                  <li>Исцеление шаблона: Восстановление силы</li>
+                  <li>Работа с&nbsp;провальными инстинктами</li>
+                  <li>Работа с&nbsp;физическими симптомами</li>
+                  <li>Коуч сессия</li>
+                  <li>Коуч сессия — работа с&nbsp;саботажем</li>
+                  <li>Работа с&nbsp;саботажем</li>
+                  <li>Инфобизнес</li>
+                  <li>Составление программы продающего мастер класса</li>
+                  <li>Как проводить продающий мастер класс</li>
+                  <li>Продажи на&nbsp;вебинарах</li>
+                  <li>Подготовка к&nbsp;запуску МК и платного курса</li>
+                  <li>Составление своих авторских техник работы с&nbsp;МАК</li>
+                  <li>Работа с&nbsp;клиентом по&nbsp;моделированию жизни. Присоединение и ведение клиента</li>
+                  <li>Демо-сессия по&nbsp;технике Квантовый скачок из&nbsp;проблемы в&nbsp;ресурсное состояние</li>
+                  <li>Технология антикризис. Работа с&nbsp;клиентом по&nbsp;запросу о&nbsp;деньгах. Денежный уровень человека</li>
+                  <li>Новые тенденции написания тренингов в&nbsp;период кризиса</li>
+                </ul>
               </div>
-              <div class="col-md-6">
+            </div>
+          </div>
+        </section>
+        <section id="plan-filling">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5">
+                <h4 class="general-title general-title-plan-filling"><span>В&nbsp;обучение входит</span></h4>
+              </div>
+              <div class="col-md-7">
                 <div class="plan-filling-info">
-                  <ul class="general-list">
+                  <ul class="plan-filling-info-list">
                     <li>53&nbsp;урока</li>
                     <li>закрытый чат курса</li>
                     <li>тьютор (персональный наставник)</li>
@@ -168,7 +188,7 @@
       </div>
       <section id="prices">
         <div class="container">
-          <h3 class="general-title">Стоимость курса</h3>
+          <h3 class="general-title"><span>Стоимость курса</span></h3>
           <div class="packets">
             <div class="packet">
               <div class="packet-head">
@@ -232,12 +252,14 @@
       <section id="revs">
         <div class="container">
           <h3 class="general-title">Отзывы</h3>
+          <div class="revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
+          </div>
         </div>
       </section>
     </div>
     <footer>
       <div class="container">
-        <div class="footer-main"><a href="https://iomp.ru" target="_blank"><img class="footer-logo" src="../img/images/logo-white.svg" alt="Логотип"></a>
+        <div class="footer-main"><a href="https://iomp.ru" target="_blank"><img class="footer-logo" src="../img/images/logo-1.svg" alt="Логотип"></a>
           <div class="footer-info">
             <div class="footer-info-item">
               <p>125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20</p>
