--- a/course/index.html
+++ b/course/index.html
@@ -197,7 +197,7 @@
               <div class="packet-body">
                 <p class="cost cost-sale">99&nbsp;000&nbsp;р.</p>
                 <p class="cost-text">с&nbsp;учетом гранта</p>
-                <p class="cost cost-full">вместо <span>149&nbsp;000&nbsp;р.</span></p><a class="button" href="">Забронировать место</a>
+                <p class="cost cost-full">вместо <span>149&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="">Забронировать место</a>
               </div>
             </div>
             <div class="packet">
@@ -207,18 +207,22 @@
               <div class="packet-body">
                 <p class="cost cost-sale">199&nbsp;000&nbsp;р.</p>
                 <p class="cost-text">с&nbsp;учетом гранта</p>
-                <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button" href="">Забронировать место</a>
+                <p class="cost cost-full">вместо <span>249&nbsp;000&nbsp;р.</span></p><a class="button button-cost" href="">Забронировать место</a>
               </div>
             </div>
             <p class="packet-or">или</p>
           </div>
           <p class="prices-text">Минимальный платеж по&nbsp;рассрочке <span>от 4125 руб\мес</span></p>
           <div class="instalment">
-            <div class="instalment-col-1">
-              <h4 class="instalment-title"></h4>
-              <ul class="instalment-list"></ul>
+            <div class="instalment-col instalment-col-1">
+              <h4 class="instalment-title">Рассрочка от&nbsp;банка партнера</h4>
+              <ul class="instalment-list">
+                <li>На&nbsp;3, 6, 12 или 24 месяцев</li>
+                <li>Без&nbsp;первоначального взноса</li>
+                <li>Без&nbsp;переплат</li>
+              </ul>
             </div>
-            <div class="instalment-col-2"><img class="instalment-img" src="../img/images/t.png" alt="Тинькоф"/>
+            <div class="instalment-col instalment-col-2"><img class="instalment-img" src="../img/images/t.png" alt="Тинькоф"/>
               <div class="instalment-text">
                 <p>Рассрочка доступна также гражданам <span>Беларуси, Казахстана, Узбекистана и Кыргызстана</span></p>
               </div>
@@ -230,20 +234,20 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-push-6">
-              <h4 class="author-title d-none"><small>Спикер</small>Жанна Абрамова</h4>
+              <h4 class="author-title d-none"><small>Спикер</small><span>Жанна Абрамова</span></h4>
               <div class="author-img"><img src="../img/images/janna-course.png" alt="Жанна Абрамова"/>
                 <p class="author-img-text">SKOLKOVO TECH & INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».</p>
               </div>
             </div>
             <div class="col-md-6 col-md-pull-6">
-              <h4 class="author-title mob-none"><small>Спикер</small>Жанна Абрамова</h4>
+              <h4 class="general-title general-title-author mob-none"><small>Спикер</small><span>Жанна Абрамова</span></h4>
               <ul class="general-list">
-                <li>Психотерапевт, клинический психолог</li>
-                <li>Более 15 лет практической работы</li>
-                <li>Более 10 000 выпускников окончивших курсы и обучающие программы</li>
-                <li>Эксперт федеральных каналов</li>
-                <li>Ведущий преподаватель “Института современной психологии”</li>
-                <li>Коуч, тренер обучающих и трансформационных программ</li>
+                <li><span>Психотерапевт, клинический психолог</span></li>
+                <li><span>Более 15 лет</span> практической работы</li>
+                <li><span>Более 10 000</span> выпускников окончивших курсы и обучающие программы</li>
+                <li><span>Эксперт</span> федеральных каналов</li>
+                <li><span>Ведущий преподаватель</span> “Института современной психологии”</li>
+                <li><span>Коуч, тренер</span> обучающих и трансформационных программ</li>
               </ul>
             </div>
           </div>
@@ -251,7 +255,7 @@
       </section>
       <section id="revs">
         <div class="container">
-          <h3 class="general-title">Отзывы</h3>
+          <h3 class="general-title general-title-white">Отзывы</h3>
           <div class="revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.png" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.png" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.png" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.png" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.png" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.png" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.png" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.png" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.png" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.png" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.png" alt="Отзыв 10"></a>
           </div>
         </div>
